# mp-transparency-tracker

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  myneta_id_mapping.json  pyproject.toml  requirements.txt  sansad_photos.json
.github/workflows/: ci.yml  deploy-dashboard.yml
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/public/geo/: india-states.json
dashboard/scripts/: prepare-geo.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: CAGSection.tsx  ClientIndiaMap.tsx  ClientScoreRadar.tsx  ClientStateMap.tsx  ColorLegend.tsx  IndiaMap.tsx  (+21 more)
data/: debug_report.json
data/enrichment/: coverage_after_backfill.json  coverage_after_manual_overrides.json  myneta_loksabha2024_candidates.json
scripts/: backfill_myneta_esakshi.py  backfill_profile_completeness.py  download_hayley_fast.sh  download_hayley_maxfield.py  enrich_mps.py  fetch_myneta_data.py  notify_telegram.py  rescore_with_enrichment.py  run.py  scheduled_refresh.sh  seed_generator.py  test_esakshi_playwright.py
src/mp_transparency_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/tracker/: __init__.py  config.py  debugger.py  main.py
tests/: conftest.py  test_agents.py  test_compensation.py  test_data_quality.py  test_debugger.py  test_discovery.py  test_esakshi.py  test_mplads_calc.py  test_mplads_datagov.py  test_name_match.py  test_sansad.py  test_scoring.py  test_tools.py
tests/fixtures/: myneta_sample.html  prs_page_sample.html  prs_sample.json  sansad_api_response.json
(+2431 files in other folders)
